--- a/mycoaching.css
+++ b/mycoaching.css
@@ -114,15 +114,24 @@ nav img{
     }
     .nav-links{
         position: absolute;
-        background: #f44336;
+        background: #8CABFF;
         height: 100vh;
-        width: 200px;
+        width: 100vw;
         top: 0;
-        right: -200px;
-        text-align: left;
+        right: -100vw;
+        /* text-align: left; */
         z-index: 2;
         transition: 1s;
         overflow:hidden;
+    }
+
+    .nav-links ul
+    {
+        height: 90vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     #nav1 {
         display: block;
